--- a/www.southchinamachine.com/www.southchinamachine.com/col.html
+++ b/www.southchinamachine.com/www.southchinamachine.com/col.html
@@ -79,7 +79,7 @@ s.parentNode.insertBefore(fs, s);
 <script type="text/javascript" src="//1.ss.faisys.com/js/comm/jquery/jquery-mousewheel.min.js?v=201811011027"></script>
 <script type="text/javascript" src="//1.ss.faisys.com/js/comm/fai.min.js?v=201811011027"></script>
 <script type="text/javascript" src="//1.ss.faisys.com/js/comm/jquery/jquery-ui-core.min.js?v=201811211412"></script>
-<script type="text/javascript" src="//1.ss.faisys.com/js/site.min.js?v=201811211412"></script>
+<script type="text/javascript" src="site.min.js"></script>
 <script type="text/javascript" src="//1.ss.faisys.com/js/locale/2052.min.js?v=201811011027"></script>
 
 
@@ -160,20 +160,30 @@ s.parentNode.insertBefore(fs, s);
 <div id='navCenterContent' class='navCenterContent'>
 <div id='navCenter' class='navCenter'>
 <div class='itemPrev'></div>
-<div class='itemContainer'>
-<div title='' id='nav2' class='item itemCol2 itemIndex1' colid='2' onclick='window.open("/", "_self")' _jump='window.open("/", "_self")'>
-<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='index.html' onclick="return false;"><span class='itemName0'>首页</span></a></div></div>
-<div class='itemSep'><span class='itemSepLine'></span></div><div title='' id='nav105' class='item itemCol105 itemIndex2' colid='105' onclick='window.open("/col.jsp?id=105", "_self")' _jump='window.open("/col.jsp?id=105", "_self")'>
-<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col.html?id=105' onclick="return false;"><span class='itemName0'>产品中心</span></a></div></div>
-<div class='itemSep'><span class='itemSepLine'></span></div><div title='' id='nav102' class='item itemCol102 itemIndex3' colid='102' onclick='window.open("/col.jsp?id=102", "_self")' _jump='window.open("/col.jsp?id=102", "_self")'>
-<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-1.html?id=102' onclick="return false;"><span class='itemName0'>模拟生产</span></a></div></div>
-<div class='itemSep'><span class='itemSepLine'></span></div><div title='' id='nav104' class='item itemCol104 itemIndex4' colid='104' onclick='window.open("/col.jsp?id=104", "_self")' _jump='window.open("/col.jsp?id=104", "_self")'>
-<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-2.html?id=104' onclick="return false;"><span class='itemName0'>新闻资讯</span></a></div></div>
-<div class='itemSep'><span class='itemSepLine'></span></div><div title='' id='nav103' class='item itemCol103 itemIndex5' colid='103' onclick='window.open("/col.jsp?id=103", "_self")' _jump='window.open("/col.jsp?id=103", "_self")'>
-<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-3.html?id=103' onclick="return false;"><span class='itemName0'>关于我们</span></a></div></div>
-<div class='itemSep'><span class='itemSepLine'></span></div><div title='' id='nav106' class='item itemCol106 itemIndex6' colid='106' onclick='window.open("/col.jsp?id=106", "_self")' _jump='window.open("/col.jsp?id=106", "_self")'>
-<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-4.html?id=106' onclick="return false;"><span class='itemName0'>联系我们</span></a></div></div>
-</div>
+	<div class='itemContainer'>
+		<div title='' id='nav2' class='item itemCol2 itemIndex1' colid='2' onclick='window.open("/", "_self")' _jump='window.open("/", "_self")'>
+			<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='index.html' onclick="return false;"><span class='itemName0'>首页</span></a></div>
+		</div>
+		<div class='itemSep'><span class='itemSepLine'></span></div>
+		<div title='' id='nav105' class='item itemCol105 itemIndex2' colid='105' onclick='window.open("/col.html", "_self")' _jump='window.open("/col.html", "_self")'>
+			<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='/col.html' onclick="return false;"><span class='itemName0'>产品中心</span></a></div>
+		</div>
+		<div class='itemSep'><span class='itemSepLine'></span></div>
+		<div title='' id='nav102' class='item itemCol102 itemIndex3' colid='102' onclick='window.open("/col-1.html", "_self")' _jump='window.open("/col-1.html", "_self")'>
+			<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-1.html' onclick="return false;"><span class='itemName0'>模拟生产</span></a></div>
+		</div>
+		<div class='itemSep'><span class='itemSepLine'></span></div>
+		<div title='' id='nav104' class='item itemCol104 itemIndex4' colid='104' onclick='window.open("/col-2.html", "_self")' _jump='window.open("/col-2.html", "_self")'>
+			<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-2.html' onclick="return false;"><span class='itemName0'>新闻资讯</span></a></div>
+		</div>
+
+		<div class='itemSep'><span class='itemSepLine'></span></div>
+		<div title='' id='nav103' class='item itemCol103 itemIndex5' colid='103' onclick='window.open("/col-3.html", "_self")' _jump='window.open("/col-3.html", "_self")'>
+			<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-3.html' onclick="return false;"><span class='itemName0'>关于我们</span></a></div>
+		</div>
+		<div class='itemSep'><span class='itemSepLine'></span></div><div title='' id='nav106' class='item itemCol106 itemIndex6' colid='106' onclick='window.open("/col-4.html", "_self")' _jump='window.open("/col-4.html", "_self")'>
+		<div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-4.html' onclick="return false;"><span class='itemName0'>联系我们</span></a></div></div>
+	</div>
 <div class='itemNext'></div>
 </div>
 </div>
