--- a/www.southchinamachine.com/www.southchinamachine.com/col-2.html
+++ b/www.southchinamachine.com/www.southchinamachine.com/col-2.html
@@ -27,7 +27,7 @@ if (typeof Fai == 'undefined'){
 }
 (function() { 
 var fs = document.createElement("script"); 
-fs.src = "//fe.faisys.com/jssdk_1_0/js/hawkEye.min.js?v=201809261929";
+fs.src = "hawkEye.min.js";
 window.FAI_HAWK_EYE = {}; 
 window.FAI_HAWK_EYE.jssdk_report_url = "//report.fkw.com/js/report"; 
 window.FAI_HAWK_EYE.jssdk_appid = 3004; 
@@ -75,12 +75,12 @@ s.parentNode.insertBefore(fs, s);
 
 
 
-<script type="text/javascript" src="//1.ss.faisys.com/js/comm/jquery/jquery-core.min.js?v=201811211412"></script>
+<script type="text/javascript" src="jquery-core.min.js"></script>
 <script type="text/javascript" src="//1.ss.faisys.com/js/comm/jquery/jquery-mousewheel.min.js?v=201811011027"></script>
-<script type="text/javascript" src="//1.ss.faisys.com/js/comm/fai.min.js?v=201811011027"></script>
-<script type="text/javascript" src="//1.ss.faisys.com/js/comm/jquery/jquery-ui-core.min.js?v=201811211412"></script>
+<script type="text/javascript" src="fai.min.js"></script>
+<script type="text/javascript" src="jquery-ui-core.min.js"></script>
 <script type="text/javascript" src="site.min.js"></script>
-<script type="text/javascript" src="//1.ss.faisys.com/js/locale/2052.min.js?v=201811011027"></script>
+<script type="text/javascript" src="2052.min.js"></script>
 
 
 
@@ -1340,7 +1340,7 @@ Site.loadCss("//2.ss.faisys.com/css/datepicker.min.css?v=201811211412");
 			});
 
 	$LAB.script("//1.ss.faisys.com/js/faiFloatPanel.min.js?v=201811011027")
-		.script("//1.ss.faisys.com/js/faiFloatPanel_bindEvent.min.js?v=201811011027")
+		.script("faiFloatPanel_bindEvent.min.js")
 		
 		.wait(function(){
 			Site.loadCss("//2.ss.faisys.com/css/faiFloatPanel.min.css?v=201811011027", function(){
