--- a/www.southchinamachine.com/www.southchinamachine.com/index.html
+++ b/www.southchinamachine.com/www.southchinamachine.com/index.html
@@ -168,23 +168,23 @@ s.parentNode.insertBefore(fs, s);
 <div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='index.html' onclick="return false;"><span class='itemName0'>首页</span></a></div>
 </div>
 <div class='itemSep'><span class='itemSepLine'></span></div>
-	<div title='' id='nav105' class='item itemCol105 itemIndex2' colid='105' onclick='window.open("/col.html", "_self")' _jump='window.open("/col.html", "_self")'>
+	<div title='' id='nav105' class='item itemCol105 itemIndex2' colid='105' onclick='window.open("./col.html", "_self")' _jump='window.open("./col.html", "_self")'>
 <div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='/col.html' onclick="return false;"><span class='itemName0'>产品中心</span></a></div>
 	</div>
 <div class='itemSep'><span class='itemSepLine'></span></div>
-	<div title='' id='nav102' class='item itemCol102 itemIndex3' colid='102' onclick='window.open("/col-1.html", "_self")' _jump='window.open("/col-1.html", "_self")'>
+	<div title='' id='nav102' class='item itemCol102 itemIndex3' colid='102' onclick='window.open("./col-1.html", "_self")' _jump='window.open("./col-1.html", "_self")'>
 <div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-1.html' onclick="return false;"><span class='itemName0'>模拟生产</span></a></div>
 	</div>
 <div class='itemSep'><span class='itemSepLine'></span></div>
-	<div title='' id='nav104' class='item itemCol104 itemIndex4' colid='104' onclick='window.open("/col-2.html", "_self")' _jump='window.open("/col-2.html", "_self")'>
+	<div title='' id='nav104' class='item itemCol104 itemIndex4' colid='104' onclick='window.open("./col-2.html", "_self")' _jump='window.open("./col-2.html", "_self")'>
 <div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-2.html' onclick="return false;"><span class='itemName0'>新闻资讯</span></a></div>
 	</div>
 
 <div class='itemSep'><span class='itemSepLine'></span></div>
-	<div title='' id='nav103' class='item itemCol103 itemIndex5' colid='103' onclick='window.open("/col-3.html", "_self")' _jump='window.open("/col-3.html", "_self")'>
+	<div title='' id='nav103' class='item itemCol103 itemIndex5' colid='103' onclick='window.open("./col-3.html", "_self")' _jump='window.open("./col-3.html", "_self")'>
 <div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-3.html' onclick="return false;"><span class='itemName0'>关于我们</span></a></div>
 	</div>
-<div class='itemSep'><span class='itemSepLine'></span></div><div title='' id='nav106' class='item itemCol106 itemIndex6' colid='106' onclick='window.open("/col-4.html", "_self")' _jump='window.open("/col-4.html", "_self")'>
+<div class='itemSep'><span class='itemSepLine'></span></div><div title='' id='nav106' class='item itemCol106 itemIndex6' colid='106' onclick='window.open("./col-4.html", "_self")' _jump='window.open("./col-4.html", "_self")'>
 <div class='itemCenter'><a hidefocus='true' style='outline:none;' class='' href='col-4.html' onclick="return false;"><span class='itemName0'>联系我们</span></a></div></div>
 </div>
 <div class='itemNext'></div>
